# menu-utility

./: code_map.py  config.json  gui.py  main.py  menu.csv  menu.json  menu.py  menu_by_company.json  menu_by_company.py  menu_element.py  menu_factory.py  pyproject.toml  style.py  메뉴분류엑셀.xlsx
api/: api_caller.py
config/: config_model.py
domain/: menu.py
menu_manager/: gui.py  main.py  menu_by_company.py  menu_factory.py  style.py
menu_manager/api/: api_caller.py
menu_manager/component/: menu_bar.py  monitoring_tree.py
menu_manager/cookie/: cookie_manager.py
menu_manager/db/: init_monitoring_data.py  init_tag_data.py
menu_manager/domain/: menu.py
menu_manager/gui/: monitoring_view.py
menu_manager/gui/windows/: tag_form_window.py  tag_list_window.py
menu_manager/models/: plc_monitoring.py  plc_tag.py
menu_manager/pages/: login_page.py
menu_manager/repository/: plc_monitoring_sqlite_repository.py  plc_tag_sqlite_repository.py
menu_manager/utils/: crypto.py
pages/: login_page.py  main_page.py  menu_list_page.py
test/: combination.py  url_mapper.py
