[tool.poetry]
name = "menu-manager"
version = "0.1.0"
description = ""
authors = ["Kyeongrok.kim <kyeongrok.kim@e3view.com>"]
readme = "README.md"
packages = [{include = "menu_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.3"
openpyxl = "^3.1.5"
cryptography = "^44.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
